--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,10 +36,7 @@ jobs:
       - name: Build with pyinstaller for ${{matrix.TARGET}}
         run: ${{matrix.CMD_BUILD}}
       - name: Create Release
-        # TODO: Update for node 20 once released
-        # For now use a commit from the main branch
-        # https://github.com/softprops/action-gh-release/pull/406
-        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
+        uses: softprops/action-gh-release@v2
         with:
           draft: true
           generate_release_notes: true
