--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,10 @@ exclude = [
     "torf_gui.egg-info",
 ]
 target-version = "py311"
+
+[tool.ruff.lint]
 select = ["E","W","F","B","I","C90","N801", "N999", "PT", "UP", "ERA001", "RUF100"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "./torf_gui/__init__.py" = ["F401"]
 "./torf_gui/ui_*.py" = ["E501", "N801"]
